// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Number renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 gBLEES"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 vrKkh"
        disabled={true}
        placeholder=" "
        type="number"
        value="123"
      />
      <p
        className="HintText-sc-1e9hzxr-0 dfhEvA"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 gBLEES"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 iTsLEi"
        disabled={true}
        placeholder=" "
        type="number"
        value="123"
      />
      <p
        className="HintText-sc-1e9hzxr-0 dfhEvA"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 gBLEES"
      disabled={true}
    >
      <div
        className="Inner-sc-1soq84i-0 QnEHj"
      >
        <input
          className="Input-qkdgvx-0 eUDgkQ"
          disabled={true}
          placeholder=" "
          type="number"
          value="123"
        />
        <label
          className="LabelInner-vrrjt0-0 deQKxJ"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 dfhEvA"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 chhofr"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="HintText-sc-1e9hzxr-0 heGnbI"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 jtLuCA"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="HintText-sc-1e9hzxr-0 heGnbI"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 QnEHj"
      >
        <input
          className="Input-qkdgvx-0 dxNDxS"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="LabelInner-vrrjt0-0 deQKxJ"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 heGnbI"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 vrKkh"
        placeholder=" "
        readOnly={true}
        type="number"
        value="1234"
      />
      <p
        className="HintText-sc-1e9hzxr-0 dfhEvA"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 iTsLEi"
        placeholder=" "
        readOnly={true}
        type="number"
        value="1234"
      />
      <p
        className="HintText-sc-1e9hzxr-0 dfhEvA"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 QnEHj"
      >
        <input
          className="Input-qkdgvx-0 eUDgkQ"
          placeholder=" "
          readOnly={true}
          type="number"
          value="1234"
        />
        <label
          className="LabelInner-vrrjt0-0 deQKxJ"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 dfhEvA"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 vrKkh"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="HintText-sc-1e9hzxr-0 dfhEvA"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 iTsLEi"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="HintText-sc-1e9hzxr-0 dfhEvA"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 QnEHj"
      >
        <input
          className="Input-qkdgvx-0 eUDgkQ"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="LabelInner-vrrjt0-0 deQKxJ"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 dfhEvA"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 vrKkh"
        placeholder="e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 iTsLEi"
        placeholder="e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 QnEHj"
      >
        <input
          className="Input-qkdgvx-0 eUDgkQ"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="LabelInner-vrrjt0-0 deQKxJ"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <input
        className="Input-qkdgvx-0 vrKkh"
        placeholder="medium e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <input
        className="Input-qkdgvx-0 iTsLEi"
        placeholder="large e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 QnEHj"
      >
        <input
          className="Input-qkdgvx-0 hXUlhp"
          placeholder="xlarge e.g. 1234"
          type="number"
        />
        <label
          className="LabelInner-vrrjt0-0 deQKxJ"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 eEyDLO"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="HintText-sc-1e9hzxr-0 dfhEvA"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 jzfRrF"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="HintText-sc-1e9hzxr-0 dfhEvA"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 hrjkOU"
      >
        <input
          className="Input-qkdgvx-0 eUDgkQ"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="LabelInner-vrrjt0-0 deQKxJ"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 dfhEvA"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
